templates/aws/template.tf
resource "aws_eip" "web_server_eip" {
  vpc = true
  instance = "${aws_instance.web_server.id}"
}

resource "aws_security_group" "web_security_group" {
  name = "WebSecurityGroup"
  description = "Enable SSH access, HTTP access via port 80"
  vpc_id = "${var.vpc_id}"
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ap_security_group" {
  name = "APSecurityGroup"
  description = "Enable SSH access and HTTP access via port 8080"
  vpc_id = "${var.vpc_id}"
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    security_groups = ["${aws_security_group.web_security_group.id}"]
  }
}

resource "aws_security_group" "db_security_group" {
  name = "DBSecurityGroup"
  description = "Enable SSH access and DB access via port 3306"
  vpc_id = "${var.vpc_id}"
  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = ["${aws_security_group.ap_security_group.id}"]
  }
}

resource "aws_instance" "web_server" {
  ami = "${var.web_image}"
  instance_type = "${var.web_instance_type}"
  key_name = "${var.key_name}"
  vpc_security_group_ids = ["${aws_security_group.web_security_group.id}", "${var.shared_security_group}"]
  subnet_id = "${element(split(", ", var.subnet_ids), 0)}"
  associate_public_ip_address = true
  tags {
    Name = "WebServer"
  }
}

resource "aws_instance" "ap_server" {
  depends_on = ["aws_instance.web_server"]
  ami = "${var.ap_image}"
  instance_type = "${var.ap_instance_type}"
  key_name = "${var.key_name}"
  vpc_security_group_ids = ["${aws_security_group.ap_security_group.id}", "${var.shared_security_group}"]
  subnet_id = "${element(split(", ", var.subnet_ids), 0)}"
  associate_public_ip_address = true
  tags {
    Name = "APServer"
  }
}

resource "aws_instance" "db_server" {
  depends_on = ["aws_instance.web_server"]
  ami = "${var.db_image}"
  instance_type = "${var.db_instance_type}"
  key_name = "${var.key_name}"
  vpc_security_group_ids = ["${aws_security_group.db_security_group.id}", "${var.shared_security_group}"]
  subnet_id = "${element(split(", ", var.subnet_ids), 0)}"
  associate_public_ip_address = true
  tags {
    Name = "DBServer"
  }
}

output "cluster_addresses" {
  value = "${aws_instance.web_server.private_ip}, ${aws_instance.ap_server.private_ip}, ${aws_instance.db_server.private_ip}"
}

output "frontend_addresses" {
  value = "${aws_eip.web_server_eip.public_ip}, ${aws_instance.ap_server.public_ip}, ${aws_instance.db_server.public_ip}"
}
